--- a/selector.html
+++ b/selector.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>selectors</title>
+    <link rel="stylesheet" href="selector.css">
 </head>
 <body>
-   <p class="Day8">today class is selector</p> 
+    <h1>WELCOME TO DAY8 CLASS</h1>
+   <h2 class="Day8">today class is selector</h2> 
    <p id="selector">let's us know about the selector and types of selectors in html.</p>
+   <p id="para" classs="selector">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum excepturi at ad natus! Ratione ullam blanditiis doloribus aut. Dicta et repellat illum quod ducimus nesciunt, quo dolores voluptatibus quos id!
+   Aliquam, officia error? Commodi voluptas quos iste velit voluptatum exercitationem culpa excepturi enim necessitatibus! In, quasi maiores! Nulla necessitatibus, quam temporibus commodi aliquid recusandae natus, nobis quos illum ipsum minima?</p>
+   <div>
+    <h2>This is an division class</h2>
+    <p class="para">lets know about div</p>
+    <button type="button">submit</button>
+    <h1>GOOD AFTERNOON GUYS!</h1>
+</div>
 </body>
 </html>
