--- a/selector.html
+++ b/selector.html
@@ -16,7 +16,7 @@
     <h2>This is an division class</h2>
     <p class="para">lets know about div</p>
     <button type="button">submit</button>
-    <h1>GOOD AFTERNOON GUYS!</h1>
+    <h1>GOOD AFTERNOON ALL!</h1>
 </div>
 </body>
 </html>
